validation-test/compiler_crashers_2_fixed/rdar58813746.swift
@@ -1,0 +1,13 @@
+// RUN: not %target-swift-frontend -typecheck %s
+
+struct CommandContext<Command> {
+  init() {
+    let input = [1,2,3].filter {
+
+extension CommandContext {
+  struct Options {
+    subscript<T>(path: T) -> Int {
+      fatalError()
+    }
+  }
+}
