validation-test/compiler_crashers_2_fixed/sr13004.swift
@@ -1,0 +1,8 @@
+// RUN: not %target-swift-frontend -typecheck %s
+
+func verifyDecoder<Decoder>() {
+
+extension ByteToMessageDecoderVerifier {
+
+class RecordingChannel {
+  func readInbound<T>(foo bar: Int) {}
